--- a/index.html
+++ b/index.html
@@ -43,21 +43,22 @@
             <div class="header-left-side">
                 <h1 class="header-title">Start your Journey as
                     Influencer</h1>
-                <p class="header-description">Begin your journey as an influencer by sharing your unique story and passion with the world. Stay authentic, consistent, and connect meaningfully with your and grow!</p>
-                    <button class="header-btn">Prebook Now</button>
+                <p class="header-description">Begin your journey as an influencer by sharing your unique story and
+                    passion with the world. Stay authentic, consistent, and connect meaningfully with your and grow!</p>
+                <button class="header-btn">Prebook Now</button>
             </div>
             <div class="header-right-side">
-              <div class="header-right-side-img">
-                <img id="header-right-img" src="images/Circle design.svg" alt="" class="circle">
-              </div>
-              <div class="header-r-s-i">
-                <img src="images/main-camera.png" alt="" class="main-camera">
-              </div>
+                <div class="header-right-side-img">
+                    <img id="header-right-img" src="images/Circle design.svg" alt="" class="circle">
+                </div>
+                <div class="header-r-s-i">
+                    <img src="images/main-camera.png" alt="" class="main-camera">
+                </div>
             </div>
         </div>
     </header>
 
-    <main>
+    <main class="">
         <section class="sponser-img">
             <div class="sponser-container">
                 <img src="logos/Alibaba.svg" alt="" class="spons-container-img">
@@ -70,7 +71,112 @@
             </div>
         </section>
         <section class="popular-collection">
-            
+            <h1 class="popular-title">Popular Colletion</h1>
+            <div class="popular-collection-container">
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/tripod.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Tripod Camera</h3>
+                        <p class="card-price">$50.48</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Wordwide shifting available
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/mic.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Microphone</h3>
+                        <p class="card-price">$120.25</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Capture sound voice, enhances communication!</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/airpod.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Airbuds</h3>
+                        <p class="card-price">$100.00</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Wireless earbuds, seamless sound, ultimate convenience!</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/drone.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Drone</h3>
+                        <p class="card-price">$980.25</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Flying device, captures views, innovative technology.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/lights.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Light Setup</h3>
+                        <p class="card-price">$1200.00</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Illuminates scenes, enhances ambiance, perfect clarity.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/setup.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Photoshoot Set</h3>
+                        <p class="card-price">$820.40</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Captures moments, freezes time, creates memories.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/camera.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Vlogging Camera</h3>
+                        <p class="card-price">$1800.80</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Compact device, captures stories, elevates content.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/single-light.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Green Screen</h3>
+                        <p class="card-price">$25.48</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">One chance, precise aim, lasting impact.</p>
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="tripod-img">
+                        <img src="images/action.png" alt="" class="t-img">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title">Action Camera</h3>
+                        <p class="card-price">$380.00</p>
+                        <p class="card-rating">⭐⭐⭐⭐☆ <span class="rating"> 4.99</span></p>
+                        <p class="card-description">Compact, durable, captures endless possibilities.</p>
+                    </div>
+
+                </div>
+
+            </div>
+            <p class="see-more">See More <img src="images/right.png" alt="" class="right-aro"></p>
         </section>
     </main>
 </body>
