feature-page-added

--- a/index.html
+++ b/index.html
@@ -178,6 +178,19 @@
             </div>
             <p class="see-more">See More <img src="images/right.png" alt="" class="right-aro"></p>
         </section>
+        <section class="feature-page">
+            <div class="feature-container">
+                <div class="left-side">
+                    <img src="images/gear.png" alt="" class="left-img">
+                </div>
+                <div class="right-side">
+                    <h1 class="feature-title">Featured products at one place</h1>
+                    <p class="feature-description">Experience the pinnacle of innovation with our feature-packed product. Combining cutting-edge technology with sleek aesthetics, it’s built to impress. Elevate your everyday experiences with this game-changing solution.</p>
+                    <button class="feature-btn">Join Now</button>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
 
