--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -185,13 +187,30 @@
                 </div>
                 <div class="right-side">
                     <h1 class="feature-title">Featured products at one place</h1>
-                    <p class="feature-description">Experience the pinnacle of innovation with our feature-packed product. Combining cutting-edge technology with sleek aesthetics, it’s built to impress. Elevate your everyday experiences with this game-changing solution.</p>
+                    <p class="feature-description">Experience the pinnacle of innovation with our feature-packed
+                        product. Combining cutting-edge technology with sleek aesthetics, it’s built to impress. Elevate
+                        your everyday experiences with this game-changing solution.</p>
                     <button class="feature-btn">Join Now</button>
                 </div>
             </div>
 
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <h1 class="footer-title">Influencer products</h1>
+            <p class="footer-description">Copyright © 2025 influencer products</p>
+            <p class="footer-last-description">All rights reserved</p>
+        </div>
+        <div class="footer-icon">
+                <i id="icon" class="fab fa-instagram"></i>
+
+                <i id="icon" class="fab fa-dribbble"></i>
+         
+            <i id="icon" class="fab fa-twitter"></i>
+            <i id="icon" class="fab fa-youtube"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
